@@ -13,6 +13,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
+import java.io.StringReader;
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
@@ -49,7 +50,7 @@ class DamengAgentMetadataTest {
         String allTablesSql = String.join("\n", JdbcMetadataSqlFake.statements);
         Assertions.assertTrue(tablesSql.contains("COMMENTS"), tablesSql);
         Assertions.assertTrue(allTablesSql.contains("ALL_OBJECTS"), allTablesSql);
-        Assertions.assertTrue(allTablesSql.contains("MATERIALIZED_VIEW"), allTablesSql);
+        Assertions.assertTrue(allTablesSql.contains("USER_MVIEWS"), allTablesSql);
         Assertions.assertFalse(allTablesSql.contains("ALL_MVIEWS"), allTablesSql);
         Assertions.assertFalse(tablesSql.contains("ALL_TABLES"), tablesSql);
         Assertions.assertFalse(tablesSql.contains("ALL_VIEWS"), tablesSql);
@@ -77,6 +78,20 @@ class DamengAgentMetadataTest {
         Assertions.assertEquals(1, objects.size());
         Assertions.assertEquals("USERS", objects.get(0).getName());
         Assertions.assertEquals("用户示例表", objects.get(0).getComment());
+    }
+
+    @Test
+    void listSchemasIncludesSchemaObjectsWithoutChildren() {
+        DamengAgent agent = new DamengAgent();
+        List<String> sqls = new ArrayList<>();
+        TestSupport.setPrivateConnection(agent, metadataConnection("id comment", null, false, List.of(), sqls, ""));
+
+        List<String> schemas = agent.listSchemas();
+
+        Assertions.assertEquals(List.of("APP", "EMPTY_SCHEMA"), schemas);
+        Assertions.assertTrue(sqls.stream().anyMatch(sql -> sql.contains("SYS.SYSOBJECTS") && sql.contains("TYPE$ = 'SCH'")), String.join("\n", sqls));
+        Assertions.assertTrue(sqls.stream().noneMatch(sql -> sql.contains("ALL_USERS")), String.join("\n", sqls));
+        Assertions.assertTrue(sqls.stream().noneMatch(sql -> sql.contains("ALL_OBJECTS")), String.join("\n", sqls));
     }
 
     @Test
@@ -188,6 +203,76 @@ class DamengAgentMetadataTest {
         Assertions.assertTrue(ddl.contains("COMMENT ON COLUMN \"APP\".\"USERS\".\"ID\" IS 'id comment';"), ddl);
     }
 
+    @Test
+    void readsFullTableDdlFromCharacterStreamWhenGetStringIsTruncated() {
+        DamengAgent agent = new DamengAgent();
+        String fullDdl = "CREATE TABLE \"APP\".\"USERS\" (\n  \"ID\" NUMBER,\n  \"PAYLOAD\" VARCHAR2(2000)\n);\n-- "
+            + "x".repeat(5000)
+            + "\n-- DBX_FULL_DDL_END";
+        TestSupport.setPrivateConnection(agent, metadataConnection(
+            "id comment",
+            null,
+            false,
+            List.of(),
+            null,
+            fullDdl
+        ));
+
+        String ddl = agent.getTableDdl("APP", "USERS");
+
+        Assertions.assertTrue(ddl.contains("DBX_FULL_DDL_END"), ddl);
+    }
+
+    @Test
+    void appendsIndependentIndexesToTableDdl() {
+        DamengAgent agent = new DamengAgent();
+        List<String> sqls = new ArrayList<>();
+        TestSupport.setPrivateConnection(agent, metadataConnectionWithIndexes(sqls));
+
+        String ddl = agent.getTableDdl("APP", "USERS");
+
+        Assertions.assertTrue(
+            ddl.contains("CREATE INDEX \"APP\".\"IDX_USERS_NAME\" ON \"APP\".\"USERS\" (\"NAME\");"),
+            ddl
+        );
+        Assertions.assertTrue(
+            ddl.contains("CREATE UNIQUE INDEX \"APP\".\"UX_USERS_EMAIL\" ON \"APP\".\"USERS\" (\"EMAIL\");"),
+            ddl
+        );
+        Assertions.assertFalse(ddl.contains("PK_USERS"), ddl);
+        String indexSql = sqls.stream().filter(sql -> sql.contains("ALL_INDEXES")).findFirst().orElseThrow();
+        Assertions.assertTrue(indexSql.contains("CONSTRAINT_TYPE IN ('P', 'U')"), indexSql);
+        long dbmsMetadataCalls = sqls.stream().filter(sql -> sql.contains("DBMS_METADATA.GET_DDL")).count();
+        Assertions.assertEquals(1, dbmsMetadataCalls);
+    }
+
+    @Test
+    void skipsDamengInternalIndexesWhenAppendingTableDdl() {
+        DamengAgent agent = new DamengAgent();
+        List<String> sqls = new ArrayList<>();
+        TestSupport.setPrivateConnection(agent, metadataConnection(
+            "id comment",
+            null,
+            false,
+            List.of(
+                indexRow("IDX_USERS_NAME", "NAME", "NONUNIQUE", "NORMAL"),
+                indexRow("SYS_INTERNAL_DDL", "ID", "NONUNIQUE", "INNER CLUSTER INDEX")
+            ),
+            sqls
+        ));
+
+        String ddl = agent.getTableDdl("APP", "USERS");
+
+        Assertions.assertTrue(
+            ddl.contains("CREATE INDEX \"APP\".\"IDX_USERS_NAME\" ON \"APP\".\"USERS\" (\"NAME\");"),
+            ddl
+        );
+        Assertions.assertFalse(ddl.contains("SYS_INTERNAL_DDL"), ddl);
+        Assertions.assertFalse(ddl.contains("INNER CLUSTER INDEX"), ddl);
+        long dbmsMetadataCalls = sqls.stream().filter(sql -> sql.contains("DBMS_METADATA.GET_DDL")).count();
+        Assertions.assertEquals(1, dbmsMetadataCalls);
+    }
+
     private static Connection metadataConnection() {
         return metadataConnection("id comment", null);
     }
@@ -197,12 +282,52 @@ class DamengAgentMetadataTest {
     }
 
     private static Connection metadataConnection(String allColumnComment, String fallbackColumnComment, boolean includeMaterializedView) {
+        return metadataConnection(allColumnComment, fallbackColumnComment, includeMaterializedView, List.of(), null);
+    }
+
+    private static Connection metadataConnectionWithIndexes(List<String> sqls) {
+        return metadataConnection(
+            "id comment",
+            null,
+            false,
+            List.of(
+                indexRow("IDX_USERS_NAME", "NAME", "NONUNIQUE", "NORMAL"),
+                indexRow("UX_USERS_EMAIL", "EMAIL", "UNIQUE", "NORMAL")
+            ),
+            sqls
+        );
+    }
+
+    private static Connection metadataConnection(
+        String allColumnComment,
+        String fallbackColumnComment,
+        boolean includeMaterializedView,
+        List<List<Object>> independentIndexes,
+        List<String> sqls
+    ) {
+        return metadataConnection(allColumnComment, fallbackColumnComment, includeMaterializedView, independentIndexes, sqls, "CREATE TABLE \"APP\".\"USERS\" (\n  \"ID\" NUMBER\n);");
+    }
+
+    private static Connection metadataConnection(
+        String allColumnComment,
+        String fallbackColumnComment,
+        boolean includeMaterializedView,
+        List<List<Object>> independentIndexes,
+        List<String> sqls,
+        String dbmsMetadataDdl
+    ) {
         return proxy(Connection.class, (method, args) -> {
             String name = method.getName();
             if ("prepareStatement".equals(name)) {
                 String sql = (String) args[0];
+                if (sqls != null) {
+                    sqls.add(sql);
+                }
                 if (sql.contains("DBMS_METADATA.GET_DDL")) {
-                    return metadataStatement(List.of(List.of("CREATE TABLE \"APP\".\"USERS\" (\n  \"ID\" NUMBER\n);")));
+                    return dbmsMetadataStatement(dbmsMetadataDdl);
+                }
+                if (sql.contains("SYS.SYSOBJECTS") && sql.contains("TYPE$ = 'SCH'")) {
+                    return metadataStatement(List.of(List.of("APP"), List.of("EMPTY_SCHEMA")));
                 }
                 if (sql.contains("ALL_CONS_COLUMNS")) {
                     return metadataStatement(List.of(List.of("ID")));
@@ -229,15 +354,16 @@ class DamengAgentMetadataTest {
                             : List.of()
                     );
                 }
-                if (sql.contains("ALL_OBJECTS") && sql.contains("MATERIALIZED VIEW")) {
+                if (sql.contains("USER_MVIEWS") && sql.contains("ALL_OBJECTS")) {
                     return metadataStatement(
-                        includeMaterializedView
-                            ? List.of(Arrays.asList("USER_SUMMARY_MV", "mv comment"))
-                            : List.of()
+                        includeMaterializedView ? List.of(Arrays.asList("USER_SUMMARY_MV", "mv comment")) : List.of()
                     );
                 }
                 if (sql.contains("ALL_OBJECTS")) {
                     return metadataStatement(List.of());
+                }
+                if (sql.contains("ALL_INDEXES")) {
+                    return metadataStatement(independentIndexes);
                 }
                 if (sql.contains("ALL_TAB_COMMENTS")) {
                     List<List<Object>> rows = new ArrayList<>();
@@ -275,6 +401,36 @@ class DamengAgentMetadataTest {
             }
             if ("isClosed".equals(name)) {
                 return false;
+            }
+            return defaultValue(method.getReturnType());
+        });
+    }
+
+    private static List<Object> indexRow(String name, String columns, String uniqueness, String indexType) {
+        return List.of(name, columns, uniqueness, indexType);
+    }
+
+    private static PreparedStatement dbmsMetadataStatement(String ddl) {
+        List<String> params = new ArrayList<>();
+        return proxy(PreparedStatement.class, (method, args) -> {
+            String name = method.getName();
+            if ("executeQuery".equals(name)) {
+                String objectType = params.isEmpty() ? "" : params.get(0);
+                if ("INDEX".equals(objectType)) {
+                    throw new AssertionError("Dameng table DDL should generate index DDL from metadata");
+                }
+                return metadataResultSet(List.of(List.of(new LongText(ddl, ddl.substring(0, Math.min(ddl.length(), 64))))));
+            }
+            if ("setString".equals(name)) {
+                int index = ((Integer) args[0]) - 1;
+                while (params.size() <= index) {
+                    params.add("");
+                }
+                params.set(index, String.valueOf(args[1]));
+                return null;
+            }
+            if ("close".equals(name)) {
+                return null;
             }
             return defaultValue(method.getReturnType());
         });
@@ -340,6 +496,9 @@ class DamengAgentMetadataTest {
             if ("getString".equals(name)) {
                 if (args[0] instanceof Integer columnIndex) {
                     Object value = rows.get(index[0]).get(columnIndex - 1);
+                    if (value instanceof LongText longText) {
+                        return longText.truncated;
+                    }
                     return value == null ? null : value.toString();
                 }
                 return switch (((String) args[0]).toUpperCase()) {
@@ -351,6 +510,12 @@ class DamengAgentMetadataTest {
                     case "COLNAME" -> string(rows, index[0], 0);
                     default -> null;
                 };
+            }
+            if ("getCharacterStream".equals(name) && args[0] instanceof Integer columnIndex) {
+                Object value = rows.get(index[0]).get(columnIndex - 1);
+                if (value instanceof LongText longText) {
+                    return new StringReader(longText.full);
+                }
             }
             if ("getObject".equals(name)) {
                 return switch (((String) args[0]).toUpperCase()) {
@@ -370,14 +535,27 @@ class DamengAgentMetadataTest {
 
     private static String string(List<List<Object>> rows, int rowIndex, int columnIndex) {
         Object value = rows.get(rowIndex).get(columnIndex);
+        if (value instanceof LongText longText) {
+            return longText.full;
+        }
         return value == null ? null : value.toString();
+    }
+
+    private static final class LongText {
+        private final String full;
+        private final String truncated;
+
+        private LongText(String full, String truncated) {
+            this.full = full;
+            this.truncated = truncated;
+        }
     }
 
     @SuppressWarnings("unchecked")
     private static <T> T proxy(Class<T> type, MethodHandler handler) {
         InvocationHandler invocationHandler = new InvocationHandler() {
             @Override
-            public Object invoke(Object proxy, Method method, Object[] args) {
+            public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
                 return handler.handle(method, args);
             }
         };
@@ -413,6 +591,6 @@ class DamengAgentMetadataTest {
     }
 
     private interface MethodHandler {
-        Object handle(Method method, Object[] args);
+        Object handle(Method method, Object[] args) throws Throwable;
     }
 }
